# nixos-dotfiles

./: .editorconfig  .envrc  .lazy.lua  .nixd.json  .sops.yaml  Justfile  Makefile  README.md  constants.nix  dae1.dae  docker_proxy.sh  flake.nix  localproxy.sh  nixos.nix  proxy.sh  proxy_off.sh  treefmt.nix  typos.toml  variables.nix  vars.nix  wslproxy.sh
config/: base.nix
flake/: hosts.nix  pkgs.nix
home/: default.nix
home-manager/: home.nix
lib/: default.nix  stdlib-extended.nix  umport.nix
modules/: audio.nix  bluetooth.nix  default.nix  fonts.nix  getty-autologin.nix  gpg.nix  impure.nix  nix.nix  persist.nix  sops.nix  time.nix  user.nix  xdg.nix
modules/core/nix-racer/: Cargo.toml  _package.nix
modules/core/nix-racer/src/: config.rs  main.rs
nixos/: base.nix  configuration.nix  default.nix  hardware-configuration.nix
overlays/: default.nix  mautrix-telegram-use-importlib-resources.patch
pkgs/: dae.nix  default.nix  fcitx5-lightly.nix  fcitx5-themes.nix  fluent-fcitx5.nix  jj-starship.nix  mono-gtk-theme.nix  translate-shell.nix  ttf-wps-fonts.nix  win11-icon-theme.nix  wps-office-fonts.nix  xmind.nix
profiles/: base.nix  desktop.nix  server.nix  wsl.nix
secrets/: dae-imxyy-nix-server.dae  dae-imxyy-nix-x16.dae  dae-imxyy-nix.dae  efl-tuwunel.env  et-imxyy-nix-server-nixremote.toml  et-imxyy-nix-server.toml  et-imxyy-nix-x16.toml  et-imxyy-nix.toml  flatnote.env  frp.env  go-musicfox.ini.txt  go-musicfox.toml  imxyy-nix-hashed-password.txt  imxyy-nix-rclone.conf  imxyy-nix-server-hashed-password.txt  mautrix-signal.env  mautrix-telegram.env  (+10 more)
(+480 files in other folders)
